2011-12-13  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #13428: pi1/captcha.php: PHP Fatal Error when called directly
	* Added feature #32488: Require TYPO3 4.5 and PHP 5.3

2011-12-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #32477: Reference to tslib_pibase constructor in tx_srfreecap_pi2
	* Fixed bug #13428: pi1/captcha.php: PHP Fatal Error when called directly
	* Fixed bug #13669: ereg/ereg_replace deprecated since PHP 5.3
	* Fixed bug #27000: error_reporting in pi1/class.tx_srfreecap_pi1.php
	* Fixed bug #29276: function.mt-rand: max(1) is smaller than min(5)
	* Fixed bug #26113: On enter, always the same image is loaded
	* Fixed bug #32487: Remove reference to mediunDoc

2011-02-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #13072: Captcha not showing up when using MP from other domain (Thanks to Ernesto Baschny)
	* Updated version to 1.4.1

2011-02-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12921: Audio captcha should be accessible by TAB key (Thanks to Elliot Sawyer)
	* Require PHP 5.1
	* Updated manual
	* Fixed bug #12938: "www.mydomain.org" is not RFC 2606 compilant
	* Partially fixed bug #5628: Political (In-)Correctness of the german word list
	* Updated version to 1.4.0

2011-02-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #12714: Add TS constants to control darkness of the captcha text. Thanks to Julia Pardanaud.
	* Added feature #12716: New default values of TS constants to increase CAPTCHA readability. Thanks to Julia Pardanaud.

2010-12-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #10223: BE module not shown anymore with TYPO3 4.4
	* Fixed bug #8528: Typo in Dutch localization of label in pi2/locallang.xml
	* Fixed bug #7987: maxWordLength problem

2010-04-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Require TYPO3 4.3
	* Manual updated.
	* Updated ext_emconf from TER version 1.2.3

2010-04-14  Stanislas Rolland  <typo3@sjbr.ca>
